tests/snapshots/runtime_error_fixtures/indirect_call_not_callable.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/indirect_call_not_callable.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[1 of 8] Compiling  Assert
[2 of 8] Compiling  Array
[3 of 8] Compiling  IO
[4 of 8] Compiling  List
[5 of 8] Compiling  Numeric
[6 of 8] Compiling  Option
[7 of 8] Compiling  String
• 1 error • examples/runtime_errors/indirect_call_not_callable.flx
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `f`.

  examples/runtime_errors/indirect_call_not_callable.flx:3:19
  |
3 |     let ignored = f(2)
  |                   ^^^^
  |                   ---- this argument has type `(Int) -> _ with |_`

  |                   ---- this call argument produces the conflicting type

Note:
  expected argument type: Int
  found argument type: (Int) -> _ with |_
  the actual argument type is inferred from this expression
  the actual argument type is inferred from this expression

Help:
  Pass a `Int` value as the 1st argument.
